src/objects/HRM_Bench_Poll__c.object
<CustomObject>
    <fields>
        <fullName>Employe_Id__c</fullName>
        <label>Employe Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Employe_Name__c</fullName>
        <label>Employe Name</label>
        <length>45</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grade__c</fullName>
        <label>Grade</label>
        <picklist>
            <picklistValues>
                <fullName>IE,IF,IG,IH</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Manager_Name__c</fullName>
        <label>Manager Name</label>
        <length>35</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>HRM_Bench_Poll</label>
    <nameField>
        <label>HRM_Bench_Poll Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HRM_Bench_Poll</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>